--- a/app/src/main/res/layout/item_message_chat.xml
+++ b/app/src/main/res/layout/item_message_chat.xml
@@ -94,8 +94,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="right"
                 android:textSize="14sp"
-                android:textColor="@color/name_my_account"
-                android:layout_centerHorizontal="true"/>
+                android:textColor="@color/mail_my_account"/>
 
         </RelativeLayout>
 
@@ -243,8 +242,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
                 android:gravity="left"
-                android:textColor="@color/name_my_account"
-                android:layout_centerHorizontal="true"/>
+                android:textColor="@color/mail_my_account"/>
 
         </RelativeLayout>
 
