--- a/app/src/main/res/layout/item_message_chat.xml
+++ b/app/src/main/res/layout/item_message_chat.xml
@@ -88,13 +88,22 @@
 
             </RelativeLayout>
 
-            <TextView
-                android:id="@+id/own_management_message_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <RelativeLayout
+                android:id="@+id/own_text_layout"
+                android:layout_width="match_parent"
                 android:gravity="right"
-                android:textSize="14sp"
-                android:textColor="@color/mail_my_account"/>
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/own_management_message_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:gravity="right"
+                    android:textSize="14sp"
+                    android:textColor="@color/mail_my_account"/>
+
+            </RelativeLayout>
 
         </RelativeLayout>
 
