--- a/app/src/main/res/layout/item_recent_chat_list.xml
+++ b/app/src/main/res/layout/item_recent_chat_list.xml
@@ -52,6 +52,7 @@
         android:layout_toRightOf="@id/recent_chat_list_relative_layout_avatar"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="13dp"
+        android:singleLine="true"
         android:maxLines="1"
         android:textColor="@color/file_list_first_row" />
 
@@ -104,6 +105,7 @@
         android:layout_marginLeft="16dp"
         android:textSize="14sp"
         android:ellipsize="end"
+        android:singleLine="true"
         android:maxLines="1"
         android:textColor="@color/accentColor" />
 
@@ -116,6 +118,7 @@
         android:layout_marginLeft="16dp"
         android:textSize="12sp"
         android:ellipsize="end"
+        android:singleLine="true"
         android:maxLines="1"
         android:textColor="@color/file_list_second_row" />
    
