Tasks #5862: New bottom sheet option panel in chat list screen (migration of old sliding panel)

--- a/app/src/main/res/menu/chat_action.xml
+++ b/app/src/main/res/menu/chat_action.xml
@@ -16,7 +16,7 @@
         android:title="@string/tab_archive_chat"
         MEGA:showAsAction="always"
         android:icon="@drawable/ic_videocam_white"
-        android:enabled="false"/>
+        android:enabled="true"/>
 
     <item
         android:id="@+id/cab_menu_invite_chat"
