--- a/app/src/main/res/layout/fragment_filebrowsergrid.xml
+++ b/app/src/main/res/layout/fragment_filebrowsergrid.xml
@@ -12,20 +12,27 @@
         android:layout_height="36dp"
         android:background="@color/new_background_fragment" >
 
-        <TextView
-            android:id="@+id/content_grid_text"
-            android:layout_width="fill_parent"
+        <RelativeLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/text_secondary"
-            android:layout_centerVertical="true"
-            android:textSize="14sp" />
+            android:id="@+id/content_text_nested_layout"
+            android:layout_centerVertical="true">
+
+            <TextView
+                android:id="@+id/content_grid_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/mail_my_account"
+                android:layout_marginLeft="72dp"
+                android:textSize="14sp" />
+        </RelativeLayout>
 
         <ProgressBar
             android:id="@+id/file_grid_download_progress_bar"
             style="@style/UsedSpaceProgressBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/content_grid_text"
+            android:layout_below="@id/content_text_nested_layout"
             android:visibility="gone" />
 
         <ImageView
