--- a/app/src/main/res/layout/fragment_inboxgrid.xml
+++ b/app/src/main/res/layout/fragment_inboxgrid.xml
@@ -11,19 +11,26 @@
         android:layout_height="36dp"
         android:background="@color/new_background_fragment">
 
-        <TextView
-            android:id="@+id/inbox_content_grid_text"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"            
-            android:textColor="@color/text_secondary"
-            android:layout_centerVertical="true"
-            android:textSize="14sp" />
+		<RelativeLayout
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:id="@+id/inbox_content_grid_text_nested_layout"
+			android:layout_centerVertical="true">
+
+			<TextView
+				android:id="@+id/inbox_content_grid_text"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:textColor="@color/mail_my_account"
+				android:layout_marginLeft="72dp"
+				android:textSize="14sp" />
+		</RelativeLayout>
         
        <ProgressBar
 		    android:id="@+id/inbox_grid_download_progress_bar"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content" 
-			android:layout_below="@id/inbox_content_grid_text" 
+			android:layout_below="@id/inbox_content_grid_text_nested_layout"
 			style="@style/UsedSpaceProgressBar"
 			android:visibility="gone"/>
        
