--- a/app/src/main/res/layout/fragment_offlinegrid.xml
+++ b/app/src/main/res/layout/fragment_offlinegrid.xml
@@ -13,10 +13,11 @@
 
         <TextView
             android:id="@+id/offline_content_text_grid"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"  
-            android:layout_centerVertical="true"          
-            android:textColor="@color/text_secondary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:textColor="@color/mail_my_account"
+            android:layout_marginLeft="72dp"
             android:textSize="14sp" />
     </RelativeLayout>
 
