--- a/app/src/main/res/layout/contacts_sent_requests_tab.xml
+++ b/app/src/main/res/layout/contacts_sent_requests_tab.xml
@@ -6,6 +6,36 @@
     android:gravity="center_horizontal"
     android:orientation="vertical" >
 
+    <RelativeLayout
+        android:id="@+id/contact_requests_list_content_text_layout"
+        android:layout_width="fill_parent"
+        android:layout_height="36dp"
+        android:background="@color/content_text_background">
+
+        <TextView
+            android:id="@+id/contact_requests_list_content_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/mail_my_account"
+            android:layout_marginLeft="72dp"
+            android:layout_centerVertical="true"
+            android:textSize="14sp" />
+    </RelativeLayout>
+
+    <View
+        android:id="@+id/separator"
+        android:layout_width="fill_parent"
+        android:layout_height="1dip"
+        android:layout_below="@id/contact_requests_list_content_text_layout"
+        android:background="@color/delimiterColor" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/incoming_contacts_list_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/separator"
+        android:choiceMode="multipleChoice" />
+
     <ImageView
         android:id="@+id/empty_image_contacts_requests"
         android:layout_width="wrap_content"
@@ -23,12 +53,4 @@
         android:gravity="center_horizontal"
         android:textColor="@color/text_secondary"
         android:textSize="16sp" />
-   
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/incoming_contacts_list_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:choiceMode="multipleChoice" />
-
 </RelativeLayout>
