--- a/app/src/main/res/layout/fragment_contactsgrid.xml
+++ b/app/src/main/res/layout/fragment_contactsgrid.xml
@@ -5,6 +5,30 @@
     android:background="@color/new_background_fragment"
     tools:context=".FileBrowserListFragment" >
 
+    <RelativeLayout
+        android:id="@+id/contact_content_grid_text_layout"
+        android:layout_width="fill_parent"
+        android:layout_height="36dp"
+        android:background="@color/content_text_background">
+
+        <TextView
+            android:id="@+id/contact_content_text_grid"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:textColor="@color/mail_my_account"
+            android:layout_marginLeft="72dp"
+            android:textSize="14sp" />
+    </RelativeLayout>
+
+    <mega.privacy.android.app.components.AutofitRecyclerView
+        android:id="@+id/contacts_grid_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:choiceMode="multipleChoice"
+        android:layout_below="@id/contact_content_grid_text_layout"
+        android:columnWidth="172dp"/>
+
     <ImageView
         android:id="@+id/contact_grid_empty_image"
         android:layout_width="wrap_content"
@@ -22,12 +46,5 @@
         android:gravity="center_horizontal"
         android:textColor="@color/text_secondary"
         android:textSize="16sp" />
-
-    <mega.privacy.android.app.components.AutofitRecyclerView
-        android:id="@+id/contacts_grid_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" 
-        android:choiceMode="multipleChoice"
-        android:columnWidth="172dp"/>
 
  </RelativeLayout>
