--- a/app/src/main/res/layout/item_contact_list.xml
+++ b/app/src/main/res/layout/item_contact_list.xml
@@ -31,18 +31,31 @@
             android:paddingBottom="3dp" />
     </RelativeLayout>
 
+    <ImageButton
+        android:id="@+id/contact_list_three_dots"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:background="@null"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="16dp"
+		android:layout_centerVertical="true"
+        android:src="@drawable/ic_dots_vertical_grey" />
+
     <TextView
         android:id="@+id/contact_list_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/contact_list_relative_layout_avatar"
+        android:layout_toLeftOf="@id/contact_list_three_dots"
         android:layout_marginTop="16dp"
         android:layout_marginLeft="13dp"
-        android:textColor="@color/file_list_first_row" 
-        android:ellipsize="end"
-        android:textSize="16sp"
-        android:maxLines="1"/>
-   
+        android:textColor="@color/file_list_first_row"
+        android:maxLines="1"
+        android:singleLine="true"
+        android:ellipsize="middle"
+        android:textSize="16sp"/>
+
     <TextView
         android:id="@+id/contact_list_content"
         android:layout_width="wrap_content"
@@ -54,15 +67,5 @@
         android:ellipsize="end"
         android:maxLines="1"
         android:textColor="@color/file_list_second_row" />
-
-    <ImageButton
-        android:id="@+id/contact_list_three_dots"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:background="@null"
-        android:paddingLeft="10dp"
-		android:layout_centerVertical="true"
-        android:src="@drawable/ic_dots_vertical_grey" />
 
 </RelativeLayout>
