--- a/app/src/main/res/layout/contact_explorer_item.xml
+++ b/app/src/main/res/layout/contact_explorer_item.xml
@@ -40,10 +40,12 @@
         android:layout_toRightOf="@id/contact_explorer_relative_layout_avatar"
         android:layout_marginTop="16dp"
         android:layout_marginLeft="13dp"
+		android:layout_marginRight="16dp"
         android:textColor="@color/file_list_first_row" 
-        android:ellipsize="end"
-        android:textSize="16sp"
-        android:maxLines="1"/>
+        android:ellipsize="middle"
+		android:singleLine="true"
+		android:maxLines="1"
+        android:textSize="16sp"/>
     
     <TextView 
         android:id="@+id/contact_explorer_phone_mail"
