--- a/app/src/main/res/layout/item_shared_folder.xml
+++ b/app/src/main/res/layout/item_shared_folder.xml
@@ -20,28 +20,43 @@
             android:layout_centerInParent="true"
             rounded:border_color="@color/border_file_properties"
             rounded:border_width="0dp"
-            rounded:corner_radius="27dp" />
+            rounded:corner_radius="20dp" />
 	    
 	    <TextView
 	        android:id="@+id/shared_folder_contact_initial_letter"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="-5dp" />
+            android:layout_centerInParent="true"
+            android:gravity="center_horizontal|center_vertical"
+            android:paddingBottom="3dp" />
     </RelativeLayout>
-    
+
+    <ImageButton 
+        android:id="@+id/shared_folder_contact_three_dots"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:background="@null"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="16dp"
+		android:layout_centerVertical="true"
+        android:src="@drawable/ic_dots_vertical_grey" />
+
+
     <TextView
         android:id="@+id/shared_folder_contact_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/shared_folder_contact_relative_layout_avatar"
+        android:layout_toLeftOf="@id/shared_folder_contact_three_dots"
         android:layout_marginTop="16dp"
         android:layout_marginLeft="13dp"
-        android:textColor="@color/file_list_first_row" 
-        android:ellipsize="end"
+        android:textColor="@color/file_list_first_row"
+        android:ellipsize="middle"
         android:textSize="16sp"
-        android:maxLines="1"/>    
-    
+        android:singleLine="true"
+        android:maxLines="1"/>
+
     <TextView
         android:id="@+id/shared_folder_contact_permissions"
         android:layout_width="wrap_content"
@@ -53,16 +68,6 @@
         android:ellipsize="end"
         android:maxLines="1"
         android:textColor="@color/file_list_second_row" />
-    
-    <ImageButton 
-        android:id="@+id/shared_folder_contact_three_dots"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:background="@null"
-        android:paddingLeft="10dp"
-		android:layout_centerVertical="true"
-        android:src="@drawable/ic_dots_vertical_grey" />
 
 </RelativeLayout>
 
