--- a/app/src/main/res/layout/activity_file_explorer.xml
+++ b/app/src/main/res/layout/activity_file_explorer.xml
@@ -17,37 +17,28 @@
         app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         tools:context=".FileProviderActivityLollipop" />
 
-    <TabHost
+    <!-- THE Cloud Drive TABS -->
+    <LinearLayout
         android:id="@+id/tabhost_explorer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/toolbar_explorer" >
+        android:layout_below="@id/toolbar_explorer"
+        android:gravity="center"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <android.support.design.widget.TabLayout
+            android:id="@+id/sliding_tabs_file_explorer"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="vertical" >
+            android:layout_height="wrap_content"
+            android:background="@color/mega"
+            style="@style/MyCustomTabLayout"/>
 
-            <TabWidget
-                android:id="@android:id/tabs"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
-            </TabWidget>
-
-            <FrameLayout
-                android:id="@android:id/tabcontent"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="0" />
-
-            <android.support.v4.view.ViewPager
-                android:id="@+id/explorer_tabs_pager"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1" />
-        </LinearLayout>
-    </TabHost>
+        <android.support.v4.view.ViewPager
+            android:id="@+id/explorer_tabs_pager"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+    </LinearLayout>
 
     <FrameLayout
         android:id="@+id/cloudDriveFrameLayout"
