QA report #5904: Unification of contact's info screens

--- a/app/src/main/res/layout/activity_chat_contact_properties.xml
+++ b/app/src/main/res/layout/activity_chat_contact_properties.xml
@@ -19,6 +19,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
+                app:expandedTitleMarginEnd="20dp"
                 app:contentScrim="?attr/colorPrimary"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
