--- a/app/src/main/res/layout/chat_item_bottom_sheet.xml
+++ b/app/src/main/res/layout/chat_item_bottom_sheet.xml
@@ -55,6 +55,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
+                android:singleLine="true"
                 android:maxLines="1"
                 android:ellipsize="end"
                 android:textColor="@color/name_my_account"
@@ -76,7 +77,10 @@
                 android:textColor="@color/mail_my_account"
                 android:gravity="center_vertical"
                 android:layout_below="@+id/chat_list_chat_name_text"
-                android:textSize="14sp"/>
+                android:textSize="14sp"
+                android:singleLine="true"
+                android:maxLines="1"
+                android:ellipsize="middle"/>
 
         </RelativeLayout>
 
