--- a/app/src/main/res/layout/content_chat_contact_properties_activity.xml
+++ b/app/src/main/res/layout/content_chat_contact_properties_activity.xml
@@ -131,6 +131,52 @@
             android:layout_height="1dp"
             android:background="@color/separator_grey" />
 
+
+        <!-- SHARED FOLDERS LAYOUT -->
+
+        <RelativeLayout
+            android:id="@+id/chat_contact_properties_shared_folders_layout"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:layout_gravity="left|center_vertical">
+
+            <ImageView
+                android:id="@+id/chat_contact_properties_shared_folder_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left|center_vertical"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_shared_with_grey" />
+
+            <TextView
+                android:id="@+id/chat_contact_properties_shared_folders_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_gravity="left|center_vertical"
+                android:layout_toRightOf="@id/chat_contact_properties_shared_folder_icon"
+                android:text="@string/incoming_shares_label"
+                android:textColor="@color/name_my_account"
+                android:textSize="16sp" />
+
+            <Button
+                android:id="@+id/chat_contact_properties_shared_folders_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:background="@android:color/transparent"
+                android:text="blablabla"
+                android:textColor="@color/accentColor"/>
+        </RelativeLayout>
+
+        <View
+            android:id="@+id/divider_shared_folder_layout"
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:background="@color/separator_grey" />
+
+
         <!-- SHARE CONTACT LAYOUT -->
 
         <RelativeLayout
