QA report #5904: Unification of contact's info screens

--- a/app/src/main/res/layout/activity_chat_contact_properties.xml
+++ b/app/src/main/res/layout/activity_chat_contact_properties.xml
@@ -7,7 +7,7 @@
     android:id="@+id/fragment_container"
     android:fitsSystemWindows="true"
     android:background="@color/white"
-    tools:context=".lollipop.megachat.ContactChatInfoActivityLollipop">
+    tools:context=".lollipop.megachat.ContactInfoActivityLollipop">
         <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
@@ -21,6 +21,8 @@
                 android:fitsSystemWindows="true"
                 app:expandedTitleMarginEnd="20dp"
                 app:contentScrim="?attr/colorPrimary"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
                 <RelativeLayout
