--- a/app/src/main/res/layout/content_chat_contact_properties_activity.xml
+++ b/app/src/main/res/layout/content_chat_contact_properties_activity.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="mega.privacy.android.app.lollipop.megachat.ContactInfoActivityLollipop"
+    tools:context="mega.privacy.android.app.lollipop.ContactInfoActivityLollipop"
     tools:showIn="@layout/activity_chat_contact_properties">
 
     <LinearLayout
