Bug #6017: Adapt contact info screen depending on enabled/disabled chat

--- a/app/src/main/res/layout/content_chat_contact_properties_activity.xml
+++ b/app/src/main/res/layout/content_chat_contact_properties_activity.xml
@@ -45,6 +45,7 @@
         </LinearLayout>
 
         <View
+            android:id="@+id/divider_notifications_layout"
             android:layout_width="fill_parent"
             android:layout_height="1dp"
             android:background="@color/separator_grey" />
