Task #5851 and QA report #5986

--- a/app/src/main/res/layout/chat_item_bottom_sheet.xml
+++ b/app/src/main/res/layout/chat_item_bottom_sheet.xml
@@ -105,6 +105,7 @@
             style="@style/dialogActionButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:alpha="0.54"
             android:paddingBottom="2dp"
             android:layout_marginLeft="5dp"
             android:paddingTop="2dp"
@@ -134,10 +135,11 @@
             style="@style/dialogActionButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:alpha="0.54"
             android:layout_marginLeft="5dp"
             android:paddingBottom="2dp"
             android:paddingTop="2dp"
-            android:src="@drawable/ic_ignore"
+            android:src="@drawable/ic_leave_chat"
             android:visibility="visible" />
 
         <TextView
@@ -164,6 +166,7 @@
             style="@style/dialogActionButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:alpha="0.54"
             android:layout_marginLeft="5dp"
             android:paddingBottom="2dp"
             android:paddingTop="2dp"
@@ -194,6 +197,7 @@
             style="@style/dialogActionButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:alpha="0.54"
             android:layout_marginLeft="5dp"
             android:paddingBottom="2dp"
             android:paddingTop="2dp"
