--- a/app/src/main/res/layout/participant_item_bottom_sheet.xml
+++ b/app/src/main/res/layout/participant_item_bottom_sheet.xml
@@ -108,6 +108,7 @@
                 style="@style/dialogActionButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:alpha="0.54"
                 android:paddingBottom="2dp"
                 android:layout_marginLeft="5dp"
                 android:paddingTop="2dp"
@@ -139,10 +140,11 @@
                 style="@style/dialogActionButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:alpha="0.54"
                 android:paddingBottom="2dp"
                 android:layout_marginLeft="5dp"
                 android:paddingTop="2dp"
-                android:src="@drawable/ic_menu_chat"
+                android:src="@drawable/ic_chat_black_24dp"
                 android:tint="@color/black"
                 android:visibility="visible" />
 
@@ -171,6 +173,7 @@
                 style="@style/dialogActionButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:alpha="0.54"
                 android:paddingBottom="2dp"
                 android:layout_marginLeft="5dp"
                 android:paddingTop="2dp"
@@ -202,6 +205,7 @@
                 style="@style/dialogActionButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:alpha="0.54"
                 android:layout_marginLeft="5dp"
                 android:paddingBottom="2dp"
                 android:paddingTop="2dp"
@@ -233,6 +237,7 @@
                 style="@style/dialogActionButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:alpha="0.54"
                 android:layout_marginLeft="5dp"
                 android:paddingBottom="2dp"
                 android:paddingTop="2dp"
@@ -264,10 +269,11 @@
                 style="@style/dialogActionButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:alpha="0.54"
                 android:layout_marginLeft="5dp"
                 android:paddingBottom="2dp"
                 android:paddingTop="2dp"
-                android:src="@drawable/ic_rename"
+                android:src="@drawable/ic_leave_chat"
                 android:visibility="visible" />
 
             <TextView
